--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 <main class="main-wrap">
   <section class="hero" role="main" aria-labelledby="site-title">
     <h1 id="site-title" class="site-name">자쿠드를 숭배해야 하는 이유</h1>
-    <p class="lead">이곳은 자쿠드를 숭배하는 사람들을 위한 공간이다. 메인 페이지에서는 숭배의 이유와 간단한 소개를 확인할 수 있다. 실제 숭배 수치(총 SP, 수동/자동)는 '자쿠드 숭배하기'에서 확인하라.</p>
+    <p class="lead">[Web발신] <br>너는 쿠루를 존중해야한다. 그는 이미 모든 리듬게임에 정점을 찍으며 고지능적인 손배치를 구사하여 세상에 큰 충격을 주고 현 탑랭들도 당신의 존재에 위협을 느껴 무리하여 실력을 올리고 있다. 그들은 이렇게 이야기한다. 그의 시대에 살고 있다.</p>
 
     <div class="actions" role="navigation" aria-label="quick actions">
       <a class="action-btn" href="worship.html">숭배하러 가기</a>
@@ -116,7 +116,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
       <h2 id="why-title">숭배글</h2>
       <p>자쿠드는 변하지 않는 중심이다. 작은 의식이 쌓여 큰 신념이 된다. 이 곳에서 경험하는 것은 게임화된 의례다.</p>
       <p>숭배를 통해 SP를 모으고, 건물을 세우며 당신의 신념을 증식시켜라. 제네레이터에서 가챠 연출을 즐길 수 있다. 성경 페이지에서는 장별로 텍스트와 이미지가 준비될 것이다.</p>
-      <p style="font-weight:800">주의: 이 사이트의 내용은 게임적 상상력이며 실제 종교 행위와는 무관하다.</p>
+      <p style="font-weight:800">주의: 이 사이트의 내용은 게임적 상상력이 아니며 실제 종교 행위와 관련이 깊다.</p>
     </article>
   </section>
 </main>
