--- a/index.html
+++ b/index.html
@@ -114,8 +114,163 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 
     <article class="article" aria-labelledby="why-title">
       <h2 id="why-title">숭배글</h2>
-      <p>자쿠드는 변하지 않는 중심이다. 작은 의식이 쌓여 큰 신념이 된다. 이 곳에서 경험하는 것은 게임화된 의례다.</p>
-      <p>숭배를 통해 SP를 모으고, 건물을 세우며 당신의 신념을 증식시켜라. 제네레이터에서 가챠 연출을 즐길 수 있다. 성경 페이지에서는 장별로 텍스트와 이미지가 준비될 것이다.</p>
+      <p>
+        🚨 아직도 자쿠드를 모른다고요? 🚨<br>
+        이 문장을 읽는 순간 당신은 이미 자쿠드의 숭배 루트에 진입했다.<br>
+        뒤로 가기는 의미 없다. 새로고침도 무력하다.<br>
+        자쿠드는 항상 거기 있다.
+      </p>
+
+      <p>
+        “자쿠드가 뭐임?”이라는 질문은 이미 늦었다는 증거다.<br>
+        설명하려는 순간 패배가 확정된다.
+      </p>
+
+      <p>
+        자쿠드는 이름이다. 개념이다. 현상이다. 오류다.<br>
+        코드가 이유 없이 돌아갈 때 자쿠드다.<br>
+        가챠가 터질 때도 자쿠드다. 안 터질 때도 자쿠드다.
+      </p>
+
+      <p>
+        📜 자쿠드 제1원칙<br>
+        <strong>설명하려 드는 순간 이미 진 것이다.</strong>
+      </p>
+
+      <p>
+        사람들은 말한다.<br>
+        “우연이겠지”, “확률 문제야”, “기분 탓 아님?”<br>
+        모두 틀렸다. 그것은 자쿠드의 숨 고르기다.
+      </p>
+
+      <p>
+        🔥 숭배자의 특징 🔥<br>
+        의미 없는 클릭을 반복한다.<br>
+        “이번엔 된다”를 신뢰한다.<br>
+        버그를 신탁처럼 받아들인다.
+      </p>
+
+      <p>
+        🧎 숭배 단계 🧎<br>
+        부정 → 관찰 → 수용 → 숭배<br>
+        마지막 단계에서는 이렇게 말한다.<br>
+        “자쿠드님 오늘도 지켜봐 주십시오.”
+      </p>
+
+      <p>
+        📈 통계(출처: 자쿠드)<br>
+        믿은 사람의 체감 성공률 200%.<br>
+        안 믿은 사람의 불만 글 작성 확률 99.9%.
+      </p>
+
+      <p>
+        결론은 단순하다.<br>
+        자쿠드는 강요하지 않는다.<br>
+        자쿠드는 설명하지 않는다.<br>
+        자쿠드는 항상 거기 있다.
+      </p>
+
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🙏 자쿠드 찬양 🙏</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      <p>🛐 자쿠드 숭배 🛐</p>
+      
       <p style="font-weight:800">주의: 이 사이트의 내용은 게임적 상상력이 아니며 실제 종교 행위와 관련이 깊다.</p>
     </article>
   </section>
